# plot-antenna

./: .gitignore  LICENSE  Makefile  README.rst  example.py  pyproject.toml  setup.py
mininec/: plot_antenna.py
plot_antenna/: contrib.py  eznec.py  plot_antenna.py
test/: 3-ele-10deg.aout  3-ele-10deg.asap  Messdaten.csv  conftest.py  dip-4n.4out  diphalf.nec  diphalf.nout  geo-bug.nec  geo-bug.nout  helix-small.nout  lastz.eout  mininec-1.bout  mininec-3.bout  t2.nec  t2.nout  test_plot.py
