#!/usr/bin/env python3
# Copyright (C) 2022-25 Dr. Ralf Schlatterbeck Open Source Consulting.
# Reichergasse 131, A-3411 Weidling.
# Web: http://www.runtux.com Email: office@runtux.com
# All rights reserved
# ****************************************************************************
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
#   The above copyright notice and this permission notice shall be included in
#   all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# ****************************************************************************

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "plot-antenna"
dynamic         = ["version"]
authors         = [{ name="Ralf Schlatterbeck", email="rsc@runtux.com" }, ]
description     = "Antenna plotting program for plotting antenna simulation results"
readme          = "README.rst"
license         = "MIT"
requires-python = '>=3.7'
dependencies    = ['matplotlib', 'numpy', 'pandas', 'plotly' ]
classifiers     = [
          'Development Status :: 5 - Production/Stable'
        , 'Operating System :: OS Independent'
        , 'Programming Language :: Python'
        , 'Intended Audience :: Science/Research'
        , 'Intended Audience :: Other Audience'
        ]

[project.urls]
"Homepage" = "https://github.com/schlatterbeck/plot-antenna"
"Bug Tracker" = "https://github.com/schlatterbeck/plot-antenna/issues"

[project.scripts]
plot-antenna = 'plot_antenna.plot_antenna:main'
plot-measurements-from-file = 'plot_antenna.contrib:main_csv_measurement_data'
plot-eznec = 'plot_antenna.eznec:main_eznec'

[project.optional-dependencies]
test = [
      'pytest'
    , 'kaleido'
    ]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
